--- a/style.css
+++ b/style.css
@@ -190,11 +190,14 @@ main > section {
 #mainDiv2 {
     background-image: url('images/crowded-rock-bar-dark-environment-black-and-white-383976913.png');
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     color: white;
     width: 100%;
     overflow: hidden;
     
 }
+
 
 
 
@@ -215,14 +218,28 @@ main > section {
 
 }
 
+.ticket {
+    background-image: url('images/ticket.png');
+    background-size: contain;
+
+    
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    flex: 0 0 auto;
+    margin: 20px;
+    
+}
 
 
-.ingressoInfo h2 {
+
+.ticket h2 {
     color: #e73334;
     margin-bottom: -10px;
 }
 
-.ingressoInfo h3 {
+.ticket h3 {
     margin-bottom: -5px;
 
 }
@@ -304,6 +321,7 @@ main > section {
 
 }
 
+
 /* footer  */
 
 footer {
@@ -362,8 +380,7 @@ footer div {
     #upNext {
         margin-left: 0px; 
         margin-top: -50px;
-        background-color: black;
-        width:        
+        background-color: black      
     }
     
 }
@@ -449,6 +466,14 @@ footer div {
     }
 }
 
+
+@media (max-width: 610px)  {
+    .ticket {
+        width: 411px;
+        height: 197px;
+    }
+}
+
 /* media queries mobile landscape */
 
 @media (min-width: 610px) and (max-width: 940px) {
@@ -531,13 +556,6 @@ footer div {
 }
 
 @media (min-width: 610px) and (max-width: 940px) {
-    #mainDiv3 > .blank {
-        
-
-    }
-}
-
-@media (min-width: 610px) and (max-width: 940px) {
     .upcomingEvents {
         justify-content: center;
     }
@@ -546,6 +564,13 @@ footer div {
 @media (min-width: 610px) and (max-width: 940px) {
     #icons img {
         width: 50px;
+    }
+}
+
+@media (min-width: 610px)  {
+    .ticket {
+        width: 570px;
+        height: 273px;
     }
 }
 
