--- a/style.css
+++ b/style.css
@@ -190,46 +190,23 @@ main > section {
 #mainDiv2 {
     background-image: url('images/crowded-rock-bar-dark-environment-black-and-white-383976913.png');
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-start; /* Use flex-start to avoid space-evenly affecting the widths */
     align-items: center;
     color: white;
-    width: 100%;
-    overflow: hidden;
-    
-}
-
-
-
-
-.ingressoInfo {
-    flex: 0 0 auto;
-    /* width: 300px;
-    height: 100%; */
-    padding-left: 50px;
-    padding-right: 50px;
-    border: 10px double white;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 50px;
-    background-color: black;
-    width: 500px;
-
+    overflow-x: auto; /* Enable horizontal scrolling */
+    overflow-y: hidden;
+    min-width: 100vw; /* Ensure at least viewport width */
 }
 
 .ticket {
     background-image: url('images/ticket.png');
     background-size: contain;
-
-    
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content:center;
+    justify-content: center;
     flex: 0 0 auto;
     margin: 20px;
-    
 }
 
 
